--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,5 +3,5 @@
 <!-- 		<li class="{{ page.book }}"><a href="/book" title="Book">Book</a></li> -->
 		<li class="{{ page.cv }}"><a target = "_blank" href="/files/kush_resume.pdf" title="Download CV as PDF">Resume</a></li>
 	</ul>
-	<h3 class="text-muted"><a href="/">Kushagra Mishra</a></h3>
+	<h3 class="text-muted"><a href="/">Nabeel Siddiqui</a></h3>
 	</div> <!-- /header -->
