--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
 	<div class="row">
 	<div class="col-sm-8">
-	<p><small>&copy; KUSH 2017</small></p>
+	<p><small>&copy; NABEELSIDDIQUI 2017</small></p>
 	</div>
 	</div>
 </div> <!-- /footer -->
