--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="{{ page.description }}">
-	<meta name="author" content="Kushagra Mishra">
+	<meta name="author" content="Nabeel Siddiqui">
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
-	<title>Kushagra Mishra | Software Engineer</title>
+	<title>Nabeel Siddiqui | Software Development Engineer II</title>
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
