--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="header">
 	<ul class="nav nav-pills pull-right">
- 		<li class="{{ page.book }}"><a href="/book" title="Book">Book</a></li> 
+ 		<li class="{{ page.book }}"><a href="/editorials" title="Published Books and Articles">Book</a></li> 
 		<li class="{{ page.cv }}"><a target = "_blank" href="/files/NabeelSiddiquiResume.pdf" title="Download CV as PDF">Resume</a></li>
 	</ul>
 	<h3 class="text-muted"><a href="/">Nabeel Siddiqui</a></h3>
